[gd_scene load_steps=2 format=3 uid="uid://rxui56rawoch"]

[ext_resource type="Script" uid="uid://boynbvlpt1mwk" path="res://scripts/debug_panel.gd" id="1_7of2g"]

[node name="DebugPanel" type="PanelContainer"]
visible = false
script = ExtResource("1_7of2g")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="DebugTitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.3, 1)
theme_override_font_sizes/font_size = 18
text = "DEBUG: Club Members"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="TotalHappinessLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Total Happiness: 0"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ClubMembersScroll" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="ClubMembersList" type="VBoxContainer" parent="VBoxContainer/ClubMembersScroll"]
layout_mode = 2
size_flags_horizontal = 3
